--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "678c93e8",
    "metadata": {},
    "outputs": [
@@ -20,21 +20,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (2.3.3)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (3.10.7)\n",
-      "Requirement already satisfied: seaborn in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (0.13.2)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from pandas) (2.3.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from matplotlib) (1.3.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from matplotlib) (4.60.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from matplotlib) (1.4.9)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from matplotlib) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from matplotlib) (12.0.0)\n",
-      "Requirement already satisfied: pyparsing>=3 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from matplotlib) (3.2.5)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Requirement already satisfied: pandas in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (2.3.3)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (3.10.7)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from pandas) (2.3.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from matplotlib) (1.3.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from matplotlib) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from matplotlib) (4.60.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from matplotlib) (1.4.9)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from matplotlib) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from matplotlib) (12.0.0)\n",
+      "Requirement already satisfied: pyparsing>=3 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from matplotlib) (3.2.5)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\soumi\\onedrive\\desktop\\powerbi\\project1\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6853f278",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,21 @@
     "axes[1].tick_params(axis='x', rotation=90) # Rotate labels for better readability\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Calculate key metrics for resume\n",
+    "total_sales = df['Sales'].sum()\n",
+    "total_profit = df['Profit'].sum()\n",
+    "profit_margin = (total_profit / total_sales) * 100\n",
+    "\n",
+    "# Get the number of rows\n",
+    "num_rows = df.shape[0]\n",
+    "\n",
+    "# Display the metrics\n",
+    "print(f\"Total Sales: ${total_sales:,.2f}\")\n",
+    "print(f\"Total Profit: ${total_profit:,.2f}\")\n",
+    "print(f\"Overall Profit Margin: {profit_margin:.2f}%\")\n",
+    "print(f\"Cleaned and processed {num_rows} rows of data.\")"
    ]
   },
   {
